# Oberon

./: CMakeLists.txt  Oberon_cmd.c  README.md  build.yml  oberon.c
.github/workflows/: CMakeForOberon.yml
include/: oberon.h
src/: main.c
src/modules/: banner_grab.c  tcp_connect.c  udp_raw.c
